cli/tests/testdata/error_cause_recursive.ts.out
[WILDCARD]
error: Uncaught Error: bar
const y = new Error("bar", { cause: x });
          ^
    at file:///[WILDCARD]/error_cause_recursive.ts:2:11
Caused by: Uncaught Error: foo
const x = new Error("foo");
          ^
    at file:///[WILDCARD]/error_cause_recursive.ts:1:11
Caused by: Uncaught Error: bar
const y = new Error("bar", { cause: x });
          ^
    at file:///[WILDCARD]/error_cause_recursive.ts:2:11
[WILDCARD]